Fix task label overflow.

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,7 @@ h2 {
     gap: 1.5rem;
     justify-content: space-between;
 }
+
+.flexCont.tasklist, .flexCont.form {
+    width: 100%;
+}
