--- a/src/components/task/TaskItem.module.css
+++ b/src/components/task/TaskItem.module.css
@@ -77,6 +77,7 @@ input:checked:focus + i, input:checked:hover + i {
     color: var(--color-white);
     width: 100%;
     margin-left: 0.5rem;
+    overflow: hidden;
 }
 
 .todoDeleted label {
