--- a/src/components/task/TaskList.module.css
+++ b/src/components/task/TaskList.module.css
@@ -1,3 +1,7 @@
+.list {
+    width: 100%;
+}
+
 .list > li {
     margin-bottom: 0.5rem;
 }
